recipes/serve/pie-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-auth
  labels:
    app: pie-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-auth
  template:
    metadata:
      labels:
        app: pie-auth
    spec:
      securityContext:
        allowPrivilegeEscalation: true
        capabilities: {}
        privileged: false
        readOnlyRootFilesystem: false
        seLinuxOptions: {}

      hostname: pie-auth

      containers:
        - name: pie-auth
          image: localhost/pie-auth
          resources:
            limits:
              cpu: 100m
              memory: 1G
          ports:
            - containerPort: 5001
              hostPort: 5001
              protocol: TCP
        - name: db-auth
          image: oscarfonts/h2
          resources:
            limits:
              cpu: 100m
              memory: 500M
          volumeMounts:
            - name: mnt-auth
              mountPath: /opt/h2-data
      volumes:
        - name: mnt-auth
          hostPath:
            path: /var/vol/auth
            type: DirectoryOrCreate
status: {}
