recipes/serve/pie-gate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-gate
  labels:
    app: pie-gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-gate
  template:
    metadata:
      labels:
        app: pie-gate
    spec:
      securityContext:
        allowPrivilegeEscalation: true
        capabilities: {}
        privileged: false
        readOnlyRootFilesystem: false
        seLinuxOptions: {}

      hostname: pie-gate

      containers:
        - name: pie-gate
          image: localhost/pie-gate
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 1G
status: {}
