recipes/serve/pie-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-web
  labels:
    app: pie-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-web
  template:
    metadata:
      labels:
        app: pie-web
    spec:
      securityContext:
        allowPrivilegeEscalation: true
        capabilities: {}
        privileged: false
        readOnlyRootFilesystem: false
        seLinuxOptions: {}

      containers:
        - name: pie-web
          image: localhost/pie-web
          ports:
            - containerPort: 4000
              hostPort: 4000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 1G
status: {}
