recipes/serve/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-local
              mountPath: /var/lib/registry
      volumes:
        - name: registry-local
          persistentVolumeClaim:
            claimName: registry-local
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - port: 10000
      targetPort: 5000
      nodePort: 10000
